Some more bug fixes - Also made it so you can drag before selecting - Fixed moveable being unaligned with item

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -20,7 +20,7 @@
 }
 
 .no-transition {
-	transition: none !important;
+	transition: none;
 }
 
 .up-down-flex {
